--- a/index.html
+++ b/index.html
@@ -1,25 +1,89 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>To-Do List App</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Spotify - Your favourite music is here</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li class="brand"><img src="logo1.png" alt="Spotify">Spotify</li>
+            <li>Home</li>
+            <li>About</li>
+        </ul>
+    </nav>
     <div class="container">
-        <h1 style="color: rgb(255, 255, 255)">To-Do List</h1>
-        <div class="task-input">
-            <input type="text" id="taskInput" placeholder="Enter a task...">
-        <button id="addTaskButton">Add Task</button>
-        </div>
-        <div id="progressPercentage"></div>
-        <div id="progressBarContainer">
-            <div id="progressBar"></div>
-            
-        </div>
         
-        <ol id="taskList"></ol>
-    </div>
+        <div class="songList">
+            <h1>Best of NCS - No Copyright Sounds </h1>
+            <div class="songItemContainer">
+                <div class="songItem">
+                    <img src="covers/1.jpg" alt="1">
+                    <span class="songName">Warriyo - Mortals [NCS Release]</span>
+                    <span class="songlistPlay"><span class="timestamp">05:34 <i id="0" class="far songItemPlay fa-play-circle"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img src="covers/2.jpg" alt="2">
+                    <span class="songName">Cielo - Huma-Huma</span>
+                    <span class="songlistPlay"><span class="timestamp">03:24 <i id="1" class="far songItemPlay fa-play-circle"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img src="covers/3.jpg" alt="3">
+                    <span class="songName">DEAF KEV - Invincible [NCS Release]-320k</span>
+                    <span class="songlistPlay"><span class="timestamp">02:59 <i id="2" class="far songItemPlay fa-play-circle"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img src="covers/4.jpg" alt="4">
+                    <span class="songName">Different Heaven & EH!DE - My Heart [NCS Release]</span>
+                    <span class="songlistPlay"><span class="timestamp">05:30 <i id="3" class="far songItemPlay fa-play-circle"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img src="covers/5.jpg" alt="5">
+                    <span class="songName">Janji-Heroes-Tonight-feat-Johnning-NCS-Release</span>
+                    <span class="songlistPlay"><span class="timestamp">04:34 <i id="4" class="far songItemPlay fa-play-circle"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img src="covers/6.jpg" alt="6">
+                    <span class="songName">Rabba - Salam-e-Ishq</span>
+                    <span class="songlistPlay"><span class="timestamp">03:30 <i id="5" class="far songItemPlay fa-play-circle"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img src="covers/7.jpg" alt="7">
+                    <span class="songName">Sakhiyaan - Salam-e-Ishq</span>
+                    <span class="songlistPlay"><span class="timestamp">05:46 <i id="6" class="far songItemPlay fa-play-circle"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img src="covers/8.jpg" alt="8">
+                    <span class="songName">Bhula Dena - Salam-e-Ishq</span>
+                    <span class="songlistPlay"><span class="timestamp">02:30 <i id="7" class="far songItemPlay fa-play-circle"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img src="covers/9.jpg" alt="9">
+                    <span class="songName">Tumhari Kasam - Salam-e-Ishq</span>
+                    <span class="songlistPlay"><span class="timestamp">04:49 <i id="8" class="far songItemPlay fa-play-circle"></i></span></span>
+                </div>
+            </div>
+        </div>
+        <div class="songBanner"></div>
 
-    <script src="app.js"></script>
+    </div>
+    <div class="bottom">
+        <input type="range" name="range" id="myProgressBar" min="0" max="100">
+        <div class="icons">
+            <!--fontawesome icons -->
+            <i class="far fa-3x fa-step-backward" id="previous"></i>
+            <i class="far fa-3x fa-play-circle" id="masterPlay"></i>
+            <i class="far fa-3x fa-step-forward" id="next"></i>
+        </div>
+        <div class="songInfo">
+            <img src="covers/playing.gif" width="42px" srcset="" id="gif"><span id="masterSongName">Warriyo - Mortals [NCS Release]</span>
+        </div>
+
+    </div>
+    <script src="https://kit.fontawesome.com/26504e4a1f.js" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 </html>
